trying to fix twitter video embed on mobile

--- a/public/less/quotes.less
+++ b/public/less/quotes.less
@@ -8,6 +8,7 @@ article.quote {
     max-width: 700px;
     min-height: 175px;
     text-shadow: none;
+    border-radius: 26px 26px 20px 26px;
     figure {
         position: absolute;
         top: 0;
@@ -56,6 +57,7 @@ article.quote {
             position: relative;
             padding-top: 66.6667%;
             width: 100%;
+            overflow: hidden;
 
             > * {
                 position: absolute!important;
